로고 사이즈 변경

--- a/theme/basic/css/scss/main.css
+++ b/theme/basic/css/scss/main.css
@@ -1668,7 +1668,7 @@ footer .container .address_wrap {
     width: auto;
   }
   #logo a img {
-    width: 120px;
+    width: 120px !important;
   }
 }
 
